# RustyChat

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: check_token.rs  friend_center.rs  friend_list.rs  heartbeat.rs  lib.rs  login.rs  main.rs  message_list.rs  message_push.rs  refresh_token.rs  register.rs  types.rs  ws_err_utils.rs
frontend/: package-lock.json  package.json  rsbuild.config.ts  tsconfig.json
frontend/src/: App.vue  index.ts
frontend/src/plugins/: persistedState.ts
frontend/src/router/: index.ts
frontend/src/stores/: loginState.ts
frontend/src/utils/: alert.ts  convertEpochToDate.ts  types.ts  ws.ts
frontend/src/views/: ChatWindow.vue  FriendsCenter.vue  FriendsList.vue  HomePage.vue  LoginPage.vue  RegisterPage.vue  timeFormatter.ts
